# 2024-exp-competition

./: .gitignore  第二次汇报.md
project/: CMakeLists.txt
project/docs/: 开发文档.md
project/funcs/UsbConnect/: UsbConnect.cpp  UsbConnect.def  UsbConnect.exp  UsbConnect.exports  UsbConnect.lib  connectVisa.m  disconnectVisa.m  readOriginWave.m  readme.txt
project/funcs/UsbConnect/v2/generic_interface/: UsbConnect.ctf  readme.txt
project/include/: MainWindow.h  ParaGroupBox.h  UsbConnect.h
project/src/: MainWindow.cpp  ParaGroupBox.cpp  main.cpp
